--- a/style.css
+++ b/style.css
@@ -245,6 +245,10 @@ td, th {
 	margin: 2em auto;
 }
 
+.submit-div{
+	text-align: center;
+}
+
 @media screen and (max-width: 480px){
 	.caixa,.principal,.conteudo-beneficios,.mapa-conteudo,.video{
 		width: auto;
